testdata/bad/decimal_11.ion
3.4+43.4+43.4+43.4+4
